--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FullResult"></activity>
+        <activity android:name=".Activity3"></activity>
+        <activity android:name=".FullResult" />
         <activity android:name=".Camera_Activity" />
         <activity android:name=".Activity2" />
         <activity android:name=".MainActivity">
