--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".medicationResultsActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="adjustResize">
+        <activity android:name=".trackpage"></activity>
+        <activity android:name=".medicationResultsActivity" />
         <activity android:name=".Activity3" />
         <activity android:name=".FullResult" />
         <activity android:name=".Camera_Activity" />
