added datepicker for bloodwork. Final version ready to ship.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.sick">
 
     <uses-feature android:name="android.hardware.camera" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -16,32 +15,36 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
-
-        <activity android:name="com.example.sick.infoPage" />
-        <activity android:name="com.example.sick.trackpage" />
-        <activity android:name="com.example.sick.Activity3" />
-        <activity android:name="com.example.sick.FullResult" />
-        <activity android:name="com.example.sick.Activity2" />
-        <activity android:name="com.example.sick.MainActivity"
+        <activity android:name=".Datepicker"></activity>
+        <activity android:name=".infoPage" />
+        <activity android:name=".trackpage" />
+        <activity android:name=".Activity3" />
+        <activity android:name=".FullResult" />
+        <activity android:name=".Activity2" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter android:label="blah">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
-            <data android:scheme="http"
-                android:host="www.example.com"
-                android:pathPrefix="/gizmos" />
-            <!-- note that the leading "/" is required for pathPrefix-->
-            <!-- Accepts URIs that begin with "example://gizmos” -->
-            <data android:scheme="example"
-                android:host="gizmos" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
+                <data
+                    android:host="www.example.com"
+                    android:pathPrefix="/gizmos"
+                    android:scheme="http" />
+                <!-- note that the leading "/" is required for pathPrefix -->
+                <!-- Accepts URIs that begin with "example://gizmos” -->
+
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true">
@@ -49,13 +52,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".BootReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
