--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dhanush.CheckUp"
     android:versionCode="6"
-    android:versionName="1.0"
-    >
+    android:versionName="1.0">
 
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -17,22 +17,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
-        <activity android:name="com.dhanush.CheckUp.Datepicker"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.dhanush.CheckUp.infoPage"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.dhanush.CheckUp.trackpage"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.dhanush.CheckUp.Activity3"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.dhanush.CheckUp.FullResult"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.dhanush.CheckUp.Activity2"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".MedicationMainActivity"></activity>
+        <activity android:name=".BloodWorkMainActivity" />
         <activity
-            android:name="com.dhanush.CheckUp.MainActivity"
-            android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait">
+            android:name=".Datepicker"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".infoPage"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".trackpage"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity3"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".FullResult"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity2"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,14 +63,14 @@
         </activity>
 
         <receiver
-            android:name="com.dhanush.CheckUp.AlarmReceiver"
+            android:name=".AlarmReceiver"
             android:enabled="true">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.dhanush.CheckUp.BootReceiver"
+            android:name=".BootReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -72,11 +80,15 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.dhanush.CheckUp.PackageReplaced"
+            android:name=".PackageReplaced"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
+        </receiver>
+        <receiver android:name=".SnoozeAlarm"
+            android:enabled="true">
+
         </receiver>
     </application>
 
