--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
-        <activity android:name=".MedicationMainActivity"></activity>
+        <activity android:name=".ExtraFeaturesMedication"></activity>
+        <activity android:name=".MedicationMainActivity" />
         <activity android:name=".BloodWorkMainActivity" />
         <activity
             android:name=".Datepicker"
@@ -86,10 +87,9 @@
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".SnoozeAlarm"
-            android:enabled="true">
-
-        </receiver>
+        <receiver
+            android:name=".SnoozeAlarm"
+            android:enabled="true"></receiver>
     </application>
 
 </manifest>
